--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>React App</title>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=geometry,drawing,places&key=AIzaSyDeRjqsy6HtfpbXHyk8nkeZojxdqV3CBAc"></script>
   </head>
   <body>
     <div id="root"></div>
